baseurl = https://ootzzoegrace.github.io/

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 # baseurl = "https://username.github.io"
-baseurl = "https://ootzzoegrace.github.io/CAHRwebsite/"
+baseurl = "https://ootzzoegrace.github.io/"
 # baseurl = "http://127.0.0.1:5500/"
 DefaultContentLanguage = "en"
 title = "中華國際人權促進會"
